[gd_scene load_steps=13 format=2]

[ext_resource path="res://RichTextLabel.gd" type="Script" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Button2.gd" type="Script" id=3]
[ext_resource path="res://angry_.gd" type="Script" id=4]
[ext_resource path="res://Happy.gd" type="Script" id=5]
[ext_resource path="res://Timer2.gd" type="Script" id=6]
[ext_resource path="res://Timer3.gd" type="Script" id=7]
[ext_resource path="res://Assets/Art/tree_of_wisdom.png" type="Texture" id=8]
[ext_resource path="res://Sprite.gd" type="Script" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://RichTextLabel2.gd" type="Script" id=11]
[ext_resource path="res://Sprite2.gd" type="Script" id=12]

[node name="Node2D" type="Node2D"]
position = Vector2( 3, 136 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.00392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -300.0
margin_top = 27.0
margin_right = 24.0
margin_bottom = 84.0
rect_scale = Vector2( 5, 5 )
bbcode_enabled = true
bbcode_text = "Hi there! This is placeholder text."
text = "Hi there! This is placeholder text."
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 55.0
margin_top = 60.0
margin_right = 213.0
margin_bottom = 80.0
text = "Hi"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 108.0
margin_top = 88.0
margin_right = 158.0
margin_bottom = 108.0
text = ">:("
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happy" type="RichTextLabel" parent="."]
margin_left = 373.5
margin_top = 158.0
margin_right = 680.5
margin_bottom = 215.0
bbcode_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="angry" type="RichTextLabel" parent="."]
margin_left = 345.0
margin_top = 19.5
margin_right = 652.0
margin_bottom = 76.5
bbcode_enabled = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 62, -65 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
script = ExtResource( 6 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
script = ExtResource( 7 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 238.0
margin_top = -108.0
margin_right = 313.0
margin_bottom = -52.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 164.052, -76.1082 )
texture = ExtResource( 10 )
script = ExtResource( 12 )
[connection signal="hideButtons" from="RichTextLabel" to="Button2" method="_on_RichTextLabel_hideButtons"]
[connection signal="hideButtons" from="RichTextLabel" to="Button" method="_on_RichTextLabel_hideButtons"]
[connection signal="hideSprite" from="RichTextLabel" to="Sprite" method="_on_RichTextLabel_hideSprite"]
[connection signal="hideSprite2" from="RichTextLabel" to="Sprite2" method="_on_RichTextLabel_hideSprite2"]
[connection signal="releaseTheButtons" from="RichTextLabel" to="Button2" method="_on_RichTextLabel_releaseTheButtons"]
[connection signal="releaseTheButtons" from="RichTextLabel" to="Button" method="_on_RichTextLabel_releaseTheButtons"]
[connection signal="showSprite" from="RichTextLabel" to="Sprite" method="_on_RichTextLabel_showSprite"]
[connection signal="showSprite2" from="RichTextLabel" to="Sprite2" method="_on_RichTextLabel_showSprite2"]
[connection signal="timeout" from="Timer" to="RichTextLabel" method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="RichTextLabel" method="_on_Button_pressed"]
[connection signal="button_up" from="Button2" to="Button2" method="_on_Button2_button_up"]
[connection signal="pressed" from="Button2" to="Timer3" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button2" to="RichTextLabel" method="_on_Button2_pressed"]
